// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`end-to-end test generates the same code for pet store that it did on the last test run 1`] = `
"routes/pet.ts:import type { addPet } from "../types/paths/pet.types.js";
import type { updatePet } from "../types/paths/pet.types.js";

export const POST: addPet = async ($) => {
  return $.response[200].random();
};

export const PUT: updatePet = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 2`] = `
"types/paths/pet.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { Pet } from "../components/schemas/Pet.js";

/**
 * Add a new pet to the store
 */
export type addPet = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: Pet;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
        examples: {};
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * Update an existing pet by Id
 */
export type updatePet = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: Pet;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
        examples: {};
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 3`] = `
"routes/pet/findByStatus.ts:import type { findPetsByStatus } from "../../types/paths/pet/findByStatus.types.js";

export const GET: findPetsByStatus = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 4`] = `
"types/paths/pet/findByStatus.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Pet } from "../../components/schemas/Pet.js";

/**
 * Multiple status values can be provided with comma separated strings
 */
export type findPetsByStatus = (
  $: OmitValueWhenNever<{
    query: findPetsByStatus_Query;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Array<Pet>;
          };
          "application/json": {
            schema: Array<Pet>;
          };
        };
        examples: {};
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Array<Pet>;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Array<Pet>;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type findPetsByStatus_Query = {
  /**
   * Status values that need to be considered for filter
   */
  status?: "available" | "pending" | "sold";
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 5`] = `
"routes/pet/findByTags.ts:import type { findPetsByTags } from "../../types/paths/pet/findByTags.types.js";

export const GET: findPetsByTags = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 6`] = `
"types/paths/pet/findByTags.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Pet } from "../../components/schemas/Pet.js";

/**
 * Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
 */
export type findPetsByTags = (
  $: OmitValueWhenNever<{
    query: findPetsByTags_Query;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Array<Pet>;
          };
          "application/json": {
            schema: Array<Pet>;
          };
        };
        examples: {};
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Array<Pet>;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Array<Pet>;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type findPetsByTags_Query = {
  /**
   * Tags to filter by
   */
  tags?: Array<string>;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 7`] = `
"routes/pet/{petId}.ts:import type { getPetById } from "../../types/paths/pet/{petId}.types.js";
import type { updatePetWithForm } from "../../types/paths/pet/{petId}.types.js";
import type { deletePet } from "../../types/paths/pet/{petId}.types.js";

export const GET: getPetById = async ($) => {
  return $.response[200].random();
};

export const POST: updatePetWithForm = async ($) => {
  return $.response[405].empty();
};

export const DELETE: deletePet = async ($) => {
  return $.response[400].empty();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 8`] = `
"types/paths/pet/{petId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Pet } from "../../components/schemas/Pet.js";

/**
 * Returns a single pet
 */
export type getPetById = (
  $: OmitValueWhenNever<{
    query: never;
    path: getPetById_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
        examples: {};
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type updatePetWithForm = (
  $: OmitValueWhenNever<{
    query: updatePetWithForm_Query;
    path: updatePetWithForm_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type deletePet = (
  $: OmitValueWhenNever<{
    query: never;
    path: deletePet_Path;
    headers: deletePet_Headers;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getPetById_Path = {
  /**
   * ID of pet to return
   */
  petId: number;
};

export type updatePetWithForm_Query = {
  /**
   * Name of pet that needs to be updated
   */
  name?: string;
  /**
   * Status of pet that needs to be updated
   */
  status?: string;
};

export type updatePetWithForm_Path = {
  /**
   * ID of pet that needs to be updated
   */
  petId: number;
};

export type deletePet_Path = {
  /**
   * Pet id to delete
   */
  petId: number;
};

export type deletePet_Headers = { api_key?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 9`] = `
"routes/pet/{petId}/uploadImage.ts:import type { uploadFile } from "../../../types/paths/pet/{petId}/uploadImage.types.js";

export const POST: uploadFile = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 10`] = `
"types/paths/pet/{petId}/uploadImage.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../counterfact-types/index.ts";
import type { ApiResponse } from "../../../components/schemas/ApiResponse.js";

export type uploadFile = (
  $: OmitValueWhenNever<{
    query: uploadFile_Query;
    path: uploadFile_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: ApiResponse;
          };
        };
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: ApiResponse;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type uploadFile_Query = {
  /**
   * Additional Metadata
   */
  additionalMetadata?: string;
};

export type uploadFile_Path = {
  /**
   * ID of pet to update
   */
  petId: number;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 11`] = `
"routes/store/inventory.ts:import type { getInventory } from "../../types/paths/store/inventory.types.js";

export const GET: getInventory = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 12`] = `
"types/paths/store/inventory.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";

/**
 * Returns a map of status codes to quantities
 */
export type getInventory = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: { [key: string]: number };
          };
        };
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: { [key: string]: number };
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 13`] = `
"routes/store/order.ts:import type { placeOrder } from "../../types/paths/store/order.types.js";

export const POST: placeOrder = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 14`] = `
"types/paths/store/order.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Order } from "../../components/schemas/Order.js";

/**
 * Place a new order in the store
 */
export type placeOrder = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: Order;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Order;
          };
        };
        examples: {};
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: Order;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 15`] = `
"routes/store/order/{orderId}.ts:import type { getOrderById } from "../../../types/paths/store/order/{orderId}.types.js";
import type { deleteOrder } from "../../../types/paths/store/order/{orderId}.types.js";

export const GET: getOrderById = async ($) => {
  return $.response[200].random();
};

export const DELETE: deleteOrder = async ($) => {
  return $.response[400].empty();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 16`] = `
"types/paths/store/order/{orderId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../counterfact-types/index.ts";
import type { Order } from "../../../components/schemas/Order.js";

/**
 * For valid response try integer IDs with value <= 5 or > 10. Other values will generate exceptions.
 */
export type getOrderById = (
  $: OmitValueWhenNever<{
    query: never;
    path: getOrderById_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Order;
          };
          "application/json": {
            schema: Order;
          };
        };
        examples: {};
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Order;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Order;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors
 */
export type deleteOrder = (
  $: OmitValueWhenNever<{
    query: never;
    path: deleteOrder_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getOrderById_Path = {
  /**
   * ID of order that needs to be fetched
   */
  orderId: number;
};

export type deleteOrder_Path = {
  /**
   * ID of the order that needs to be deleted
   */
  orderId: number;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 17`] = `
"routes/user.ts:import type { createUser } from "../types/paths/user.types.js";

export const POST: createUser = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 18`] = `
"types/paths/user.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../counterfact-types/index.ts";
import type { User } from "../components/schemas/User.js";

/**
 * This can only be done by the logged in user.
 */
export type createUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: User;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: User;
          };
          "application/xml": {
            schema: User;
          };
        };
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: number | undefined;
      contentType?: "application/xml";
      body?: User;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 19`] = `
"routes/user/createWithList.ts:import type { createUsersWithListInput } from "../../types/paths/user/createWithList.types.js";

export const POST: createUsersWithListInput = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 20`] = `
"types/paths/user/createWithList.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";
import type { User } from "../../components/schemas/User.js";

/**
 * Creates list of users with given input array
 */
export type createUsersWithListInput = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: Array<User>;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: User;
          };
          "application/json": {
            schema: User;
          };
        };
        examples: {};
      };
      [statusCode in Exclude<HttpStatusCode, 200>]: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: User;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 21`] = `
"routes/user/login.ts:import type { loginUser } from "../../types/paths/user/login.types.js";

export const GET: loginUser = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 22`] = `
"types/paths/user/login.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";

export type loginUser = (
  $: OmitValueWhenNever<{
    query: loginUser_Query;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: {
          "X-Rate-Limit": { schema: number };
          "X-Expires-After": { schema: string };
        };
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: string;
          };
          "application/json": {
            schema: string;
          };
        };
        examples: {};
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: string;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: string;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type loginUser_Query = {
  /**
   * The user name for login
   */
  username?: string;
  /**
   * The password for login in clear text
   */
  password?: string;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 23`] = `
"routes/user/logout.ts:import type { logoutUser } from "../../types/paths/user/logout.types.js";

export const GET: logoutUser = async ($) => {
  return $.response[200].empty();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 24`] = `
"types/paths/user/logout.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";

export type logoutUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 25`] = `
"routes/user/{username}.ts:import type { getUserByName } from "../../types/paths/user/{username}.types.js";
import type { updateUser } from "../../types/paths/user/{username}.types.js";
import type { deleteUser } from "../../types/paths/user/{username}.types.js";

export const GET: getUserByName = async ($) => {
  return $.response[200].random();
};

export const PUT: updateUser = async ($) => {
  return $.response[200].empty();
};

export const DELETE: deleteUser = async ($) => {
  return $.response[400].empty();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 26`] = `
"types/paths/user/{username}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";
import type { User } from "../../components/schemas/User.js";

export type getUserByName = (
  $: OmitValueWhenNever<{
    query: never;
    path: getUserByName_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: User;
          };
          "application/json": {
            schema: User;
          };
        };
        examples: {};
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: User;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * This can only be done by the logged in user.
 */
export type updateUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: updateUser_Path;
    headers: never;
    cookie: never;
    body: User;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * This can only be done by the logged in user.
 */
export type deleteUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: deleteUser_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getUserByName_Path = {
  /**
   * The name that needs to be fetched. Use user1 for testing.
   */
  username: string;
};

export type updateUser_Path = {
  /**
   * name that need to be deleted
   */
  username: string;
};

export type deleteUser_Path = {
  /**
   * The name that needs to be deleted
   */
  username: string;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 27`] = `
"types/components/schemas/Pet.ts:import type { Category } from "./Category.js";
import type { Tag } from "./Tag.js";

export type Pet = {
  /**
   * @format int64
   * @example 10
   */
  id?: number;
  /**
   * @example "doggie"
   */
  name: string;
  category?: Category;
  photoUrls: Array<string>;
  tags?: Array<Tag>;
  /**
   * pet status in the store
   */
  status?: "available" | "pending" | "sold";
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 28`] = `
"types/components/schemas/ApiResponse.ts:export type ApiResponse = {
  /**
   * @format int32
   */
  code?: number;
  type?: string;
  message?: string;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 29`] = `
"types/components/schemas/Order.ts:export type Order = {
  /**
   * @format int64
   * @example 10
   */
  id?: number;
  /**
   * @format int64
   * @example 198772
   */
  petId?: number;
  /**
   * @format int32
   * @example 7
   */
  quantity?: number;
  /**
   * @format date-time
   */
  shipDate?: string;
  /**
   * Order Status
   * @example "approved"
   */
  status?: "placed" | "approved" | "delivered";
  complete?: boolean;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 30`] = `
"types/components/schemas/User.ts:export type User = {
  /**
   * @format int64
   * @example 10
   */
  id?: number;
  /**
   * @example "theUser"
   */
  username?: string;
  /**
   * @example "John"
   */
  firstName?: string;
  /**
   * @example "James"
   */
  lastName?: string;
  /**
   * @example "john@email.com"
   */
  email?: string;
  /**
   * @example 12345
   */
  password?: string;
  /**
   * @example 12345
   */
  phone?: string;
  /**
   * User Status
   * @format int32
   * @example 1
   */
  userStatus?: number;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 31`] = `
"types/components/schemas/Category.ts:export type Category = {
  /**
   * @format int64
   * @example 1
   */
  id?: number;
  /**
   * @example "Dogs"
   */
  name?: string;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 32`] = `
"types/components/schemas/Tag.ts:export type Tag = {
  /**
   * @format int64
   */
  id?: number;
  name?: string;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 33`] = `
".cache
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 34`] = `
"This directory contains compiled JS files from the paths directory. Do not edit these files directly.
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 1`] = `
"routes/index.ts:import type { getRoot } from "../types/paths/index.types.js";

export const GET: getRoot = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 2`] = `
"types/paths/index.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../counterfact-types/index.ts";

/**
 * the root
 */
export type getRoot = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "text/plain": {
            schema: string;
          };
        };
        examples: {
          root: unknown;
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "text/plain";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 3`] = `
"routes/count.ts:import type { getCount } from "../types/paths/count.types.js";

export const GET: getCount = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 4`] = `
"types/paths/count.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { InternalServerError } from "../#/components/responses/InternalServerError.js";
import type { Error } from "../components/schemas/Error.js";

/**
 * outputs the number of times each URL was visited
 */
export type getCount = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: number;
          };
        };
        examples: {};
      };
      500: InternalServerError;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: number;
    }
  | {
      status: 500;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 5`] = `
"routes/hello/kitty.ts:import type { helloKitty } from "../../types/paths/hello/kitty.types.js";

export const GET: helloKitty = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 6`] = `
"types/paths/hello/kitty.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";

/**
 * HTML with a hello kitty image
 */
export type helloKitty = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
        examples: {
          "hello kitty": unknown;
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 7`] = `
"routes/hello/{name}.ts:import type { sayHello } from "../../types/paths/hello/{name}.types.js";

export const GET: sayHello = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 8`] = `
"types/paths/hello/{name}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { BadRequest } from "../../#/components/responses/BadRequest.js";
import type { Error } from "../../components/schemas/Error.js";

/**
 * says hello to someone
 */
export type sayHello = (
  $: OmitValueWhenNever<{
    query: sayHello_Query;
    path: sayHello_Path;
    headers: sayHello_Headers;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: {
          "x-test": { schema: string };
          "x-rate-limit-remaining": { schema: number };
        };
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
        examples: {
          "hello-example1": unknown;
          "hello-example2": unknown;
        };
      };
      400: BadRequest;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: string;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type sayHello_Query = {
  /**
   * language for the greeting
   */
  language?: "en" | "es" | "fr" | "de" | "ja";
};

export type sayHello_Path = {
  /**
   * the name to greet
   */
  name: string;
};

export type sayHello_Headers = {
  /**
   * idempotency key
   */
  "x-request-id"?: string;
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 9`] = `
"routes/path-one.ts:import type { getPathOne } from "../types/paths/path-one.types.js";

export const GET: getPathOne = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 10`] = `
"types/paths/path-one.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { Recursive } from "../components/schemas/Recursive.js";
import type { BadRequest } from "../#/components/responses/BadRequest.js";
import type { Error } from "../components/schemas/Error.js";

export type getPathOne = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Recursive;
          };
        };
        examples: {};
      };
      400: BadRequest;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: Recursive;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 11`] = `
"routes/weird/path/with:colon.ts:import type { weirdColonPath } from "../../../types/paths/weird/path/with∶colon.types.js";

export const GET: weirdColonPath = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 12`] = `
"types/paths/weird/path/with:colon.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../counterfact-types/index.ts";

export type weirdColonPath = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 13`] = `
"routes/users.ts:import type { listUsers } from "../types/paths/users.types.js";
import type { createUser } from "../types/paths/users.types.js";

export const GET: listUsers = async ($) => {
  return $.response[200].random();
};

export const POST: createUser = async ($) => {
  return $.response[201].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 14`] = `
"types/paths/users.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { UserList } from "../components/schemas/UserList.js";
import type { BadRequest } from "../#/components/responses/BadRequest.js";
import type { Unauthorized } from "../#/components/responses/Unauthorized.js";
import type { InternalServerError } from "../#/components/responses/InternalServerError.js";
import type { Error } from "../components/schemas/Error.js";
import type { CreateUserRequest } from "../components/schemas/CreateUserRequest.js";
import type { User } from "../components/schemas/User.js";

/**
 * List all users with optional filtering and pagination
 */
export type listUsers = (
  $: OmitValueWhenNever<{
    query: listUsers_Query;
    path: never;
    headers: listUsers_Headers;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: {
          "x-total-count": { schema: number };
          "x-next-page": { schema: string };
        };
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: UserList;
          };
        };
        examples: {
          empty: unknown;
          withUsers: unknown;
        };
      };
      400: BadRequest;
      401: Unauthorized;
      500: InternalServerError;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: UserList;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | {
      status: 401;
      contentType?: "application/json";
      body?: Error;
    }
  | {
      status: 500;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * Create a new user
 */
export type createUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: CreateUserRequest;
    context: Context;
    response: ResponseBuilderFactory<{
      201: {
        headers: {
          location: { schema: string };
        };
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: User;
          };
        };
        examples: {};
      };
      400: BadRequest;
      409: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Error;
          };
        };
        examples: {};
      };
      500: InternalServerError;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 201;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | {
      status: 409;
      contentType?: "application/json";
      body?: Error;
    }
  | {
      status: 500;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type listUsers_Query = {
  page?: number;
  pageSize?: number;
  active?: boolean;
  role?: "admin" | "editor" | "viewer";
};

export type listUsers_Headers = { "x-correlation-id"?: string };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 15`] = `
"routes/users/{userId}.ts:import type { HTTP_PARAMETERS } from "../../types/paths/users/{userId}.types.js";
import type { getUser } from "../../types/paths/users/{userId}.types.js";
import type { replaceUser } from "../../types/paths/users/{userId}.types.js";
import type { patchUser } from "../../types/paths/users/{userId}.types.js";
import type { deleteUser } from "../../types/paths/users/{userId}.types.js";

export const PARAMETERS: HTTP_PARAMETERS = {
  /* error creating export "PARAMETERS" for routes/users/{userId}.ts: TypeError: Cannot read properties of undefined (reading 'map')
    at OperationCoder.map [as write] (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/operation-coder.ts:37:41)
    at write (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/script.ts:90:47) */
};

export const GET: getUser = async ($) => {
  return $.response[200].random();
};

export const PUT: replaceUser = async ($) => {
  return $.response[200].random();
};

export const PATCH: patchUser = async ($) => {
  return $.response[200].random();
};

export const DELETE: deleteUser = async ($) => {
  return $.response[204].empty();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 16`] = `
"types/paths/users/{userId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { User } from "../../components/schemas/User.js";
import type { NotFound } from "../../#/components/responses/NotFound.js";
import type { InternalServerError } from "../../#/components/responses/InternalServerError.js";
import type { Error } from "../../components/schemas/Error.js";
import type { CreateUserRequest } from "../../components/schemas/CreateUserRequest.js";
import type { BadRequest } from "../../#/components/responses/BadRequest.js";
import type { PatchUserRequest } from "../../components/schemas/PatchUserRequest.js";

export type HTTP_PARAMETERS = {
  /* error creating export "HTTP_PARAMETERS" for types/paths/users/{userId}.types.ts: TypeError: Cannot read properties of undefined (reading 'map')
    at ResponsesTypeCoder.map [as buildResponseObjectType] (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/responses-type-coder.ts:45:24)
    at ResponsesTypeCoder.buildResponseObjectType [as writeCode] (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/responses-type-coder.ts:55:49)
    at ResponsesTypeCoder.writeCode [as write] (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/type-coder.ts:10:17)
    at OperationTypeCoder.write [as writeCode] (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/operation-type-coder.ts:230:7)
    at OperationTypeCoder.writeCode [as write] (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/type-coder.ts:10:17)
    at write (/home/runner/work/api-simulator/api-simulator/src/typescript-generator/script.ts:90:47) */
};

/**
 * Fetch a single user by ID
 */
export type getUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: User;
          };
        };
        examples: {};
      };
      404: NotFound;
      500: InternalServerError;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: 404;
      contentType?: "application/json";
      body?: Error;
    }
  | {
      status: 500;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * Replace a user record entirely (idempotent)
 */
export type replaceUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: CreateUserRequest;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: User;
          };
        };
        examples: {};
      };
      400: BadRequest;
      404: NotFound;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | {
      status: 404;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * Partially update a user record
 */
export type patchUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: PatchUserRequest;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: User;
          };
        };
        examples: {};
      };
      400: BadRequest;
      404: NotFound;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | {
      status: 404;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

/**
 * Delete a user (soft-delete)
 */
export type deleteUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      204: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      404: NotFound;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 204;
    }
  | {
      status: 404;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 17`] = `
"routes/events.ts:import type { createEvent } from "../types/paths/events.types.js";

export const POST: createEvent = async ($) => {
  return $.response[202].empty();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 18`] = `
"types/paths/events.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { ClickEvent } from "../components/schemas/ClickEvent.js";
import type { PurchaseEvent } from "../components/schemas/PurchaseEvent.js";
import type { SignUpEvent } from "../components/schemas/SignUpEvent.js";
import type { BadRequest } from "../#/components/responses/BadRequest.js";
import type { Error } from "../components/schemas/Error.js";

/**
 * Accept a polymorphic event. The request body may be any one of the known event subtypes (oneOf), demonstrating discriminator support.
 *
 */
export type createEvent = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: ClickEvent | PurchaseEvent | SignUpEvent;
    context: Context;
    response: ResponseBuilderFactory<{
      202: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
      400: BadRequest;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 202;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 19`] = `
"routes/products/{productId}.ts:import type { getProduct } from "../../types/paths/products/{productId}.types.js";

export const GET: getProduct = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 20`] = `
"types/paths/products/{productId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Product } from "../../components/schemas/Product.js";
import type { NotFound } from "../../#/components/responses/NotFound.js";
import type { Error } from "../../components/schemas/Error.js";

export type getProduct = (
  $: OmitValueWhenNever<{
    query: never;
    path: getProduct_Path;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Product;
          };
        };
        examples: {};
      };
      404: NotFound;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: Product;
    }
  | {
      status: 404;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getProduct_Path = { productId: number };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 21`] = `
"routes/uploads.ts:import type { uploadFile } from "../types/paths/uploads.types.js";

export const POST: uploadFile = async ($) => {
  return $.response[201].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 22`] = `
"types/paths/uploads.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { Error } from "../components/schemas/Error.js";

/**
 * Upload a binary file with metadata
 */
export type uploadFile = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      201: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: {
              id?: string;
              /**
               * @format uri
               */
              url?: string;
            };
          };
        };
        examples: {};
      };
      413: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Error;
          };
        };
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 201;
      contentType?: "application/json";
      body?: {
        id?: string;
        /**
         * @format uri
         */
        url?: string;
      };
    }
  | {
      status: 413;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 23`] = `
"routes/legacy/items.ts:import type { listItemsLegacy } from "../../types/paths/legacy/items.types.js";

export const GET: listItemsLegacy = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 24`] = `
"types/paths/legacy/items.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";

/**
 * Deprecated – use /users instead
 * @deprecated
 */
export type listItemsLegacy = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: listItemsLegacy_Cookie;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Array<string>;
          };
        };
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: Array<string>;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type listItemsLegacy_Cookie = { session_id?: string };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 25`] = `
"routes/reports/{reportId}.ts:import type { getReport } from "../../types/paths/reports/{reportId}.types.js";

export const GET: getReport = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 26`] = `
"types/paths/reports/{reportId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { NotFound } from "../../#/components/responses/NotFound.js";
import type { Error } from "../../components/schemas/Error.js";

/**
 * Download a report in the requested format
 */
export type getReport = (
  $: OmitValueWhenNever<{
    query: never;
    path: getReport_Path;
    headers: getReport_Headers;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: { rows?: Array<{ [key: string]: unknown }> };
          };
          "text/csv": {
            schema: string;
          };
          "application/pdf": {
            schema: Uint8Array | string;
          };
        };
        examples: {};
      };
      404: NotFound;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: { rows?: Array<{ [key: string]: unknown }> };
    }
  | {
      status: 200;
      contentType?: "text/csv";
      body?: string;
    }
  | {
      status: 200;
      contentType?: "application/pdf";
      body?: Uint8Array | string;
    }
  | {
      status: 404;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getReport_Path = { reportId: string };

export type getReport_Headers = {
  Accept?: "application/json" | "text/csv" | "application/pdf";
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 27`] = `
"routes/ping.ts:import type { ping } from "../types/paths/ping.types.js";

export const GET: ping = async ($) => {
  return $.response[204].empty();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 28`] = `
"types/paths/ping.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";

/**
 * Health-check – returns 204 with no body
 */
export type ping = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      204: {
        headers: never;
        requiredHeaders: never;
        content: never;
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 204;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 29`] = `
"routes/metadata.ts:import type { setMetadata } from "../types/paths/metadata.types.js";

export const PUT: setMetadata = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 30`] = `
"types/paths/metadata.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";

/**
 * Replace the free-form metadata store
 */
export type setMetadata = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    cookie: never;
    body: { [key: string]: unknown };
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: { [key: string]: unknown };
          };
        };
        examples: {};
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: { [key: string]: unknown };
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 31`] = `
"types/#/components/responses/InternalServerError.ts:import type { Error } from "../../../components/schemas/Error.js";

export type InternalServerError = {
  headers: never;
  requiredHeaders: never;
  content: {
    "application/json": {
      schema: Error;
    };
  };
  examples: {};
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 32`] = `
"types/components/schemas/Error.ts:/**
 * A generic error message suitable for 4xx and 5xx responses
 */
export type Error = {
  /**
   * A machine-readable error code
   */
  code?: string;
  /**
   * A human-readable description of the error
   */
  message: string;
  /**
   * Field-level validation errors
   */
  details?: Array<{ field?: string; issue?: string }>;
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 33`] = `
"types/#/components/responses/BadRequest.ts:import type { Error } from "../../../components/schemas/Error.js";

export type BadRequest = {
  headers: never;
  requiredHeaders: never;
  content: {
    "application/json": {
      schema: Error;
    };
  };
  examples: {};
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 34`] = `
"types/components/schemas/Recursive.ts:import type { Recursive } from "./Recursive.js";

export type Recursive = Recursive;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 35`] = `
"types/components/schemas/UserList.ts:import type { User } from "./User.js";

export type UserList = {
  items: Array<User>;
  total: number;
  page: number;
  pageSize: number;
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 36`] = `
"types/#/components/responses/Unauthorized.ts:import type { Error } from "../../../components/schemas/Error.js";

export type Unauthorized = {
  headers: never;
  requiredHeaders: never;
  content: {
    "application/json": {
      schema: Error;
    };
  };
  examples: {};
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 37`] = `
"types/components/schemas/CreateUserRequest.ts:export type CreateUserRequest = {
  name: string;
  /**
   * @format email
   */
  email: string;
  /**
   * @default "viewer"
   */
  role?: "admin" | "editor" | "viewer";
  metadata?: { [key: string]: string };
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 38`] = `
"types/components/schemas/User.ts:export type User = {
  /**
   * Opaque unique identifier
   */
  id: string;
  name: string;
  /**
   * @format email
   */
  email: string;
  /**
   * @default "viewer"
   */
  role: "admin" | "editor" | "viewer";
  active: boolean;
  /**
   * @format date-time
   */
  createdAt: string;
  /**
   * @format date-time
   */
  updatedAt?: string;
  /**
   * Arbitrary key/value pairs attached to the user
   */
  metadata?: { [key: string]: string };
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 39`] = `
"types/#/components/responses/NotFound.ts:import type { Error } from "../../../components/schemas/Error.js";

export type NotFound = {
  headers: never;
  requiredHeaders: never;
  content: {
    "application/json": {
      schema: Error;
    };
  };
  examples: {};
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 40`] = `
"types/components/schemas/PatchUserRequest.ts:/**
 * All fields are optional; only provided fields are updated (JSON Merge Patch semantics). Setting a nullable field to null clears it.
 *
 */
export type PatchUserRequest = {
  name?: string;
  /**
   * @format email
   */
  email?: string;
  role?: "admin" | "editor" | "viewer";
  active?: boolean;
  metadata?: { [key: string]: string };
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 41`] = `
"types/components/schemas/ClickEvent.ts:import type { BaseEvent } from "./BaseEvent.js";

export type ClickEvent = BaseEvent & {
  /**
   * @format uri
   */
  targetUrl: string;
  elementId: string;
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 42`] = `
"types/components/schemas/PurchaseEvent.ts:import type { BaseEvent } from "./BaseEvent.js";

export type PurchaseEvent = BaseEvent & {
  orderId: string;
  /**
   * @format double
   */
  totalAmount: number;
  /**
   * ISO 4217 currency code
   */
  currency: string;
  items?: Array<{
    /**
     * @format int64
     */
    productId: number;
    quantity: number;
  }>;
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 43`] = `
"types/components/schemas/SignUpEvent.ts:import type { BaseEvent } from "./BaseEvent.js";

export type SignUpEvent = BaseEvent & {
  userId: string;
  /**
   * @format email
   */
  email: string;
  referralCode?: string;
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 44`] = `
"types/components/schemas/Product.ts:export type Product = {
  /**
   * @format int64
   */
  id: number;
  name: string;
  description?: string;
  status: "available" | "out_of_stock" | "discontinued";
  /**
   * @format double
   */
  price: number;
  /**
   * @format double
   */
  discountedPrice?: number;
  /**
   * @default []
   */
  tags?: Array<string>;
  /**
   * IDs of related products
   */
  relatedIds?: Array<number>;
  /**
   * Demonstrates anyOf: each attribute value is either a string, a number, or a boolean.
   *
   */
  attributes?: { [key: string]: unknown };
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 45`] = `
"types/components/schemas/BaseEvent.ts:export type BaseEvent = {
  /**
   * Discriminator field
   */
  type: string;
  /**
   * @format date-time
   */
  occurredAt: string;
  sessionId?: string;
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 46`] = `
".cache
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 47`] = `
"This directory contains compiled JS files from the paths directory. Do not edit these files directly.
"
`;
